Unreleased

* Enable re-checking after rate limit was hit (Timo Ludwig, #153)
* Ignore raw `post_save` signal (Timo Ludwig, #106)
* Retry with fallback user agent on forbidden response (Timo Ludwig, #159)
* Also set `redirect_to` on internal redirects (Timo Ludwig, #163)
* Add new fields to `Url` model:
  * `status_code`: The HTTP status code of the initial request
  * `redirect_status_code`: The HTTP status code of the final request
  * `anchor_status`: The validity of the HTML hash anchor
  * `ssl_status` The validity of the SSL certificate
  * `error_message` The error message if the request failed
* Add new properties to `Url` model:
  * `anchor_message`: The human-readable meaning of the `anchor_status`
  * `ssl_message` The human-readable meaning of the `ssl_status`
* Add French translations.

2.1.0 (2023-02-05)

* Fix `SSL Error` for missing root certificates (Timo Ludwig, #157)
* Fix `NotImplementedError`/`AssertionError` when checking
  video links with hash anchors (Timo Ludwig, #150)
* Skip checking of hash anchors for non-html files
* Avoid decorating the `report` view with `csrf_exempt` (#155)
* recheck/ignore/unignore requests were using an obsolete `request.is_ajax` call
  (#147)

2.0.0 (2022-12-17)

* Add German translations for filebrowser integration
* Fix django-filebrowser integration (Timo Ludwig, #144)
* Use `django.db.models.BigAutoField` as default auto field
  (Timo Ludwig, #137)
* Add German translations for the templates
* Fix `type` property for internal URLs (Timo Ludwig, #141)
* Fix incorrect message when redirect has broken anchor
  (Timo Ludwig, #128)
* Breaking change: Treat broken hash anchors as valid
  unless `LINKCHECK_TOLERATE_BROKEN_ANCHOR` is manually
  set to `False` (Timo Ludwig, #98)
* Remove unused field `still_exists` from `Url` model
* Delete outdated `Url` and `Link` objects when
  running `findlinks` command (Timo Ludwig, #101)
* Avoid crash when unexpected error in signal listener occurs
  (Sven Seeberg, #117)