@@ -34,6 +34,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, None)
         self.assertEqual(uv.message, 'Email link (not automatically checked)')
+        self.assertEqual(uv.get_message, 'Email link (not automatically checked)')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
@@ -48,6 +49,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, None)
         self.assertEqual(uv.message, 'Phone number (not automatically checked)')
+        self.assertEqual(uv.get_message, 'Phone number link (not automatically checked)')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
@@ -62,6 +64,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, 'Empty link')
+        self.assertEqual(uv.get_message, 'Empty link')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
@@ -76,6 +79,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, None)
         self.assertEqual(uv.message, 'Link to within the same page (not automatically checked)')
+        self.assertEqual(uv.get_message, 'Anchor link (not automatically checked)')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, 'Anchor could not be checked')
         self.assertEqual(uv.ssl_status, None)
@@ -90,6 +94,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, "Working internal link, working internal hash anchor")
+        self.assertEqual(uv.get_message, 'Working internal link')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, 'Working anchor')
         self.assertEqual(uv.ssl_status, None)
@@ -105,6 +110,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, "Working internal link, broken internal hash anchor")
+        self.assertEqual(uv.get_message, 'Working internal link')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, 'Broken anchor')
         self.assertEqual(uv.ssl_status, None)
@@ -119,6 +125,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, "Working internal link, broken internal hash anchor")
+        self.assertEqual(uv.get_message, 'Working internal link')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, 'Broken anchor')
         self.assertEqual(uv.ssl_status, None)
@@ -133,6 +140,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, "Working temporary redirect, working internal hash anchor")
+        self.assertEqual(uv.get_message, 'Working temporary redirect')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, 'Working anchor')
         self.assertEqual(uv.ssl_status, None)
@@ -148,6 +156,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, "Working temporary redirect, broken internal hash anchor")
+        self.assertEqual(uv.get_message, 'Working temporary redirect')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, 'Broken anchor')
         self.assertEqual(uv.ssl_status, None)
@@ -162,6 +171,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, "Working temporary redirect, broken internal hash anchor")
+        self.assertEqual(uv.get_message, 'Working temporary redirect')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, 'Broken anchor')
         self.assertEqual(uv.ssl_status, None)
@@ -176,6 +186,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, "Working temporary redirect")
+        self.assertEqual(uv.get_message, 'Working temporary redirect')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
@@ -190,6 +201,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, 'Broken temporary redirect')
+        self.assertEqual(uv.get_message, 'Broken temporary redirect')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
@@ -204,6 +216,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, 'Working internal link')
+        self.assertEqual(uv.get_message, 'Working internal link')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
@@ -219,6 +232,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, 'Working internal link')
+        self.assertEqual(uv.get_message, 'Working internal link')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
@@ -233,6 +247,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, 'Broken internal link')
+        self.assertEqual(uv.get_message, 'Broken internal link')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
@@ -247,6 +262,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, 'Invalid URL')
+        self.assertEqual(uv.get_message, 'Invalid URL')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
@@ -270,6 +286,7 @@ class InternalMediaCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, 'Missing Document')
+        self.assertEqual(uv.get_message, 'Missing file')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
@@ -284,6 +301,7 @@ class InternalMediaCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, 'Working file link')
+        self.assertEqual(uv.get_message, 'Working file link')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
@@ -301,6 +319,7 @@ class InternalMediaCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, 'Working file link')
+        self.assertEqual(uv.get_message, 'Working file link')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
@@ -314,6 +333,7 @@ class InternalMediaCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, 'Working file link')
+        self.assertEqual(uv.get_message, 'Working file link')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
@@ -331,6 +351,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, '200 OK')
+        self.assertEqual(uv.get_message, 'Working external link')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
@@ -345,6 +366,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, '200 OK')
+        self.assertEqual(uv.get_message, 'Working external link')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, True)
@@ -359,6 +381,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, 'SSL Error: wrong version number')
+        self.assertEqual(uv.get_message, 'SSL Error: wrong version number')
         self.assertEqual(uv.error_message, 'SSL Error: wrong version number')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, False)
@@ -373,6 +396,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, '200 OK, SSL certificate could not be verified')
+        self.assertEqual(uv.get_message, 'Working external link')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
@@ -387,6 +411,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, '200 OK, broken external hash anchor, SSL certificate could not be verified')
+        self.assertEqual(uv.get_message, 'Working external link')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, 'Broken anchor')
         self.assertEqual(uv.ssl_status, None)
@@ -401,6 +426,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, '404 Not Found, SSL certificate could not be verified')
+        self.assertEqual(uv.get_message, 'Broken external link')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
@@ -415,6 +441,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, '200 OK')
+        self.assertEqual(uv.get_message, 'Working external link')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
@@ -429,6 +456,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, '200 OK')
+        self.assertEqual(uv.get_message, 'Working external link')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
@@ -443,6 +471,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, '301 Moved Permanently')
+        self.assertEqual(uv.get_message, 'Broken permanent redirect')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
@@ -457,6 +486,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, '301 Moved Permanently')
+        self.assertEqual(uv.get_message, 'Working permanent redirect')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
@@ -471,6 +501,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, '302 Found')
+        self.assertEqual(uv.get_message, 'Working temporary redirect')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
@@ -485,6 +516,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, '404 Not Found')
+        self.assertEqual(uv.get_message, 'Broken external link')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
@@ -499,6 +531,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, '404 Not Found')
+        self.assertEqual(uv.get_message, 'Broken permanent redirect')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
@@ -514,6 +547,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, '200 OK')
+        self.assertEqual(uv.get_message, 'Working external link')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
@@ -528,6 +562,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, '200 OK')
+        self.assertEqual(uv.get_message, 'Working external link')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
@@ -542,6 +577,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, '200 OK')
+        self.assertEqual(uv.get_message, 'Working external link')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
@@ -556,6 +592,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, '200 OK')
+        self.assertEqual(uv.get_message, 'Working external link')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
@@ -570,6 +607,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, 'Other Error: The read operation timed out')
+        self.assertEqual(uv.get_message, 'The read operation timed out')
         self.assertEqual(uv.error_message, 'The read operation timed out')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
@@ -585,6 +623,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.last_checked, None)
         self.assertEqual(uv.message, '429 Too Many Requests')
+        self.assertEqual(uv.get_message, 'URL Not Yet Checked')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
@@ -599,6 +638,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, "200 OK, working external hash anchor")
+        self.assertEqual(uv.get_message, 'Working external link')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, 'Working anchor')
         self.assertEqual(uv.ssl_status, None)
@@ -614,6 +654,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, "200 OK, broken external hash anchor")
+        self.assertEqual(uv.get_message, 'Working external link')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, 'Broken anchor')
         self.assertEqual(uv.ssl_status, None)
@@ -628,6 +669,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, "200 OK, broken external hash anchor")
+        self.assertEqual(uv.get_message, 'Working external link')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, 'Broken anchor')
         self.assertEqual(uv.ssl_status, None)
@@ -642,6 +684,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, "302 Found, working external hash anchor")
+        self.assertEqual(uv.get_message, 'Working temporary redirect')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, 'Working anchor')
         self.assertEqual(uv.ssl_status, None)
@@ -657,6 +700,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, "302 Found, broken external hash anchor")
+        self.assertEqual(uv.get_message, 'Working temporary redirect')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, 'Broken anchor')
         self.assertEqual(uv.ssl_status, None)
@@ -671,6 +715,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, "302 Found, broken external hash anchor")
+        self.assertEqual(uv.get_message, 'Working temporary redirect')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, 'Broken anchor')
         self.assertEqual(uv.ssl_status, None)
@@ -685,6 +730,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, "200 OK")
+        self.assertEqual(uv.get_message, 'Working external link')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, 'Anchor could not be checked')
         self.assertEqual(uv.ssl_status, None)
@@ -699,6 +745,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, "200 OK, failed to parse HTML for anchor")
+        self.assertEqual(uv.get_message, 'Working external link')
         self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, 'Anchor could not be checked')
         self.assertEqual(uv.ssl_status, None)
